--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,14 @@
 /* color scheme sourced from http://khroma.co/generator/ */
 :root {
-    --outer-space: #2daf9a;
+    --outer-space: #b3f3b1;
     --light-purple: #a08fec;
     --gin: #d6e7dd;
     --purple: #7c4db9;
+    --background-color: #25c072;
+    --global-fill--active: #d1d5e0;
+    --nav-avatar-border: #00bbe4;
+    --ic-brand-global-nav-menu-item__badge-bgd:#ffff;
+    --ic-brand-global-nav-menu-item__badge-text:#613955;
   }
 
   /* set content highlight color and background */
@@ -11,6 +16,188 @@
     background-color: var(--light-purple);
     color: var(--outer-space);
   }
-body {
 
+  html{scroll-behavior:smooth}
+
+  body {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.3;
+  }
+  
+  body {
+    font-family: 'Oswald', sans-serif;
+  }
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1%;
+    background-color:var(--background-color);
+    color: rgb(223, 114, 250);
+  }
+  div {
+    background-color: rgb(200, 228, 77);
+  }
+  
+  h1 {
+    font-size: 200%;
+  }
+  /* create our main grid with flexbox, use negative margins to offset the padding on the .card-column class */
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
+  .menu-item__text {
+    transform: translate3d(-100%, 0, 0);
+    opacity: 0;
+    pointer-events: none;
+    box-sizing: border-box;
+    background-color: var(--global-fill--active);
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    padding: 0 12px;
+    line-height: 1.8rem;
+    margin-top: -0.9rem;
+    font-size: 14px;
+    font-size: 0.875rem;
+    border-radius: 3px;
+    color: #fff;
+    white-space: nowrap;
 }
+
+  #headline p {
+    max-width: 350px;
+    font-size: 16px;
+    font-weight: 300;
+    margin: 0px 0px;
+    color: #40816e;
+  }
+  
+  /* ul li::marker {
+    content: ' ';
+    color: rgb(31, 95, 6);
+    font-size: 1.2em;
+} */
+
+/*Navigation CSS */
+#navBar {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 5%;
+  }
+  #navBar h1 {
+    width: 25%;
+    font-weight: 500;
+  }
+  #navigation {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  #navigation p {
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+/*Organize the page into sections using grid CSS */
+#mainGrid {
+    margin: 0px 5%;
+    display: grid;
+    min-height: 500px;
+    height: 70vh;
+    grid-template-rows: 75% 25%;
+    grid-template-columns: 30% 70%;
+    grid-template-areas:
+    "featuredProduct secondaryProduct"
+    "featuredProduct CTA";
+  }
+
+  main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    grid-gap: 10px;
+  }
+
+.flex-container {
+    max-width: 200px;
+}
+
+.flex-container {
+    display: flex;
+    background-color: rgb(118, 205, 216);
+    flex-direction: column;
+  }
+  
+  .flex-container > div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+    border: 1px solid black;
+  }
+
+  .menu-item-icon-container {
+    transform: translate3d(0, 0, 0);
+    position: relative;
+    z-index: 1;
+    width: 48px;
+    margin: 0 auto;
+    color: var(--global-fill--active);
+  }
+
+  .menu-item-icon-container img {
+    min-width: 40%;
+  }
+
+  .avatar {
+  overflow: hidden;
+  border-radius: 100%;
+  border: 2px solid var(--nav-avatar-border);
+  width: 50px;
+  height: 50px;
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: middle;
+  }
+  .menu-item__badge {
+  font-size: 11px;
+  font-size: 0.6875rem;
+  min-width: 20px;
+  line-height: 20px;
+  border-radius: 10px;
+  background: var(--ic-brand-primary);
+  color: #fff;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0 6px;
+  transition: all .3s ease-out;
+  position: absolute;
+  top: -0.5em;
+  right: 0;
+  background: var(--ic-brand-global-nav-menu-item__badge-bgd);
+  color: var(--ic-brand-global-nav-menu-item__badge-text);
+}
+ /*  .left-menu li {
+    padding-bottom: 80px;
+  }
+
+  .left-menu li a {
+    border: 1px solid black;
+    padding: 30px;
+  } */
+
+  @media screen and (max-width: 768px) {
+    main, nav {
+      flex-direction: column;
+    }
+  }
