--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,10 +112,9 @@
 
 /*Organize the page into sections using grid CSS */
 #mainGrid {
-    margin: -10px 0%;
+    margin: 0px 0%;
     display: flex;
     min-height: 210px;
-    height: 40vh;
     grid-template-rows: 40% 60%;
     grid-template-columns: 40% 60%;
 }
@@ -193,13 +192,17 @@ main {
   margin-bottom: 15px;
   justify-content: space-evenly;
 }
+.pageGrid {
+  margin: 0px 5%S;
+}
 #projectsGrid {
   /* margin: 0px 5%; */
   display: grid;
   grid-template-rows: 300px 300px;
   grid-template-columns: 1fr 1fr;
-  grid-template-areas: "project1 project1"
-  "website2 website3";
+  grid-template-areas:
+   "project1 project1"
+   "project2 project3";
 }
 .projectsGridArea {
   background-position: center;
@@ -212,6 +215,19 @@ main {
   align-content: end;
 }
   
+#project1 {
+  grid-area: project1;
+  background-image: url("../images/Horizon1_reduce.jpg");
+}
+#project2 {
+  grid-area: project2;
+  background-image: url("../images/restaurant_and-sandwich-list.jpg");
+}
+#project3 {
+  grid-area: project3;
+  background-image: url("../images/furniture2.jpg");
+}
+
    /* Footer */
   footer {
     position: relative;
@@ -220,17 +236,6 @@ main {
     line-height: 60px;
     background-color: #f5f5f5;
     margin-top: 50px;
-  }
-/* Card containing image and decsription */
-  .cardContainer {
-    position: relative;
-    margin-top: 5px;
-    max-width: 5px;
-    max-height: 5px;
-  }
-  .card {
-    display: flex;
-    margin: 0 auto;
   }
 
   @media screen and (max-width: 768px) {
